--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Streamdata Gallery
-url: google-classroom.api.streamdata.gallery
+title: Streamdata Gallery Google Classroom
+url: google-classroom.streamdata.gallery
 tag: Google Classroom
 markdown: kramdown
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md", ".DS_Store"]
-github_user: streamdata-gallery-organizations
+github_user: streamdata-gallery
 github_repo: google-classroom
 github_branch: master
 collections:
